# aris4u

./: .gitattributes  .gitignore  .gitleaks.toml  CLAUDE.md  LICENSE  MANIFEST.in  NOTICE  README.md  RUN.md  install.sh  pyproject.toml  pyrightconfig.json  requirements-lock.txt  run_all_tests.sh
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: ai-agent.md  code-review-agent.md  compliance-agent.md  data-agent.md  database-migration-agent.md  devops-agent.md  frontend-dev.md  llm-integration-specialist.md  memory-agent.md  mobile-dev.md  project-scout.md  qa-agent.md  researcher.md  security-agent.md  software-dev.md
config/: aris4u.config.example.json  aris4u_secrets.example
console/: .gitignore  .gitleaks.toml  README.md
console/aris4u_console/: capabilities.py  inventory.py  live_data.py  render_console.py  selfcheck.py  server.py  translate.py
console/data/: curated_semantics.json
console/tests/: conftest.py  test_b2_b3_fixes_20260707.py  test_bug_fixes_20260629.py  test_capabilities.py  test_class_a_bugs_round2.py  test_cowork_fixes_20260707.py  test_inventory.py  (+16 more)
data/: aris4u_hooks_depth.json  cap_translations.json  capability_runtime_snapshot.seed.json  capability_triggers.json
docs/: ARIS4U-Guia-Instalacion.html  GETTING_STARTED.md  dogfooding_sprint_guide.md  workflow_dag_guide.md
engine/: __init__.py
evals/: README.md  __main__.py  ab_embedders_western.py  bench_llm_quality.py  compare_embedders.py  rag_recall_baseline.json  run.py  run_rag_recall.py
hooks/: async_vacuum.sh  bootstrap_venv.sh  dispatch.py  hooks.json  nightly_vacuum.sh  write_client_bridge.sh
integrations/: mcp_server.py  mcp_wrapper.sh
templates/: SECURITY_CHECKLIST.md
tests/: __init__.py  conftest.py  test_active_builds.py  test_agent_output_verifier.py  test_amplify_tools.py  test_aris_recall_client_scoped.py  test_contract_gate.py  test_cosmetic_classifier.py  test_cowork_intake.py  test_cowork_recall_integration.py  test_cowork_runner.py  test_dead_code_scanner_hooks.py  test_debug_capture.py  test_depth_inject_module.py  test_f1_classifier.py  test_f1_label.py  test_f1_roi.py  test_f2_cognicion.py  test_f3_memoria.py  test_f5_validacion.py  test_f6_comunicacion.py  test_f7_aprendizaje.py  test_f7_confidence.py  test_f8_assessment.py  test_f8_cve_analyst.py  test_f8_vuln_kb.py  test_h47_migration_fk_validator.py  test_hydrate_regression.py  test_locked_scorer.py  test_memory_revenue_meter.py  test_migration_linter.py  test_model_router.py  test_model_routing_guard.py  test_novelty_detector.py  test_project_timeline.py  test_rag_recall_runner.py  test_recall_ci_gate.py  test_render_orchestration.py  test_schema_compat_check.py  test_skillopt.py  (+18 more)
tools/: MIGRATION_LINTER_README.md  SCHEMA_COMPAT_CHECK_README.md  TEST_SCHEMA_COMPAT.sh  __init__.py  _logger.py  agent_output_verifier.py  amplification_score.py  analyze_validation_log.py  aris4u_init.py  aris_config.py  aris_status.py  audit_export.py  backup-daily.plist.template  backup_to_w2.sh  capability_adoption.py  capability_hint_report.py  capability_inventory.py  capability_router.py  capability_semantic.py  conductor_enforce.py  conductor_stats.py  contract_gate.py  cosmetic_classifier.py  cost_report.py  cowork_intake.py  cowork_runner.py  debug_capture.py  detect_stack_cli.py  f1_feedback.py  f1_label.py  f1_roi.py  freeze_report.py  gen_plugin_hooks.py  log_rotator.py  measure_recall.py  memory_revenue_meter.py  migrate_observations_local.py  migration_linter.py  migration_runner.py  mlx_serve.sh  (+20 more)
(+228 files in other folders)
